[package]
name = "bookstore-demo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
tera = "1.17.1"
fastrand = "2.0.2"
mozjpeg = "0.9.3"
